# vomit

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  docker.yml  publish.yml
src/: analysis.rs  collector.rs  main.rs  strace.rs  timeline.rs  tui.rs
src/bpf/: helloworld.bpf.c  monitor.bpf.c  perf.bpf.c
src/llm/: client.rs  mod.rs  prompt.rs
