[package]
name = "vomit"
version = "0.1.0"
description = "Some AI slop for trying ratatui"
authors = ["Devansh Srivastava <devansh.srv@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.25"
libc = "0.2"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "4.5.53", default-features = false, features = ["std", "derive"] }
structopt = "0.3"
ctrlc = "3.4"
object = "0.37"
serde = "1.0.228"
reqwest ={version = "0.12.24",features = ["json"]} 
ratatui = "0.29.0"
crossterm = "0.29.0"
governor = "0.10.1"
nonzero_ext = "0.3.0"
tokio = {version ="1.48.0",features = ["rt-multi-thread"] }
chrono = "0.4.42"
[build-dependencies]
libbpf-cargo = "0.25"
